# simpleLogger

./: CMakeLists.txt  README.md  build
src/: CMakeLists.txt  simpleLogger.cpp  simpleLogger.h
tests/: CMakeLists.txt
tests/scripts/: run-tests.sh
tests/src/: TestLogger.hpp  main.cpp
